<resources>
    <string name="app_name">Journey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_applications">Applications</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="action_select">Select</string>
    <string name="action_filter_by_company">Company</string>
    <string name="action_filter_by_status">Status</string>
    <string name="action_sort_newest">Newest</string>
    <string name="action_sort_oldest">Oldest</string>
    <string name="action_more">More</string>
    <string name="title_activity_application_info">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_save">Save</string>
    <string name="title_edit">Edit</string>
    <string name="title_tasks">Tasks</string>
    <string name="job_title">Job Title</string>
    <string name="title_company">Company</string>
    <string name="title_expected_salary">Expected Salary</string>
    <string name="title_post_url">Post Url</string>
    <string name="title_location">Location</string>
    <string name="title_job_description">Job Description</string>
</resources>