<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_overflow"
        android:title="@string/action_more"
        app:showAsAction="always">
        <menu>
            <group>
                <item
                    android:id="@+id/action_select"
                    android:icon="@drawable/ic_box"
                    android:orderInCategory="100"
                    android:title="@string/action_select"
                    app:showAsAction="ifRoom|withText" />
                <item
                    android:id="@+id/action_filter_company"
                    android:icon="@drawable/ic_business"
                    android:orderInCategory="101"
                    android:title="@string/action_filter_by_company"
                    android:titleCondensed="Company"
                    app:showAsAction="ifRoom|withText" />
                <item
                    android:id="@+id/action_filter_status"
                    android:icon="@drawable/ic_tune"
                    android:orderInCategory="102"
                    android:title="@string/action_filter_by_status"
                    android:titleCondensed="Status"
                    app:showAsAction="ifRoom|withText" />
                <item
                    android:id="@+id/action_sort_newest"
                    android:icon="@drawable/ic_colockwise"
                    android:orderInCategory="103"
                    android:title="@string/action_sort_newest"
                    app:showAsAction="ifRoom|withText" />
                <item
                    android:id="@+id/action_sort_oldest"
                    android:icon="@drawable/ic_counterwise"
                    android:orderInCategory="104"
                    android:title="@string/action_sort_oldest"
                    app:showAsAction="ifRoom|withText" />
            </group>
        </menu>
    </item>
</menu>