<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".ui.ApplicationInfo.AddApplicationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#3C3B3B"
        app:boxStrokeColor="#006064"
        app:hintTextColor="#006064"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/job_title"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_job_title"
        android:layout_marginTop="10dp"
        android:textColorHint="#3C3B3B"
        app:boxStrokeColor="#006064"
        app:hintTextColor="#006064">

        <EditText
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/title_company" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_expected_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_company"
        android:layout_marginTop="10dp"
        android:textColorHint="#3C3B3B"
        app:boxStrokeColor="#006064"
        app:hintTextColor="#006064">

        <EditText
            android:id="@+id/expected_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/title_expected_salary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_post_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_expected_salary"
        android:layout_marginTop="10dp"
        android:textColorHint="#3C3B3B"
        app:boxStrokeColor="#006064"
        app:hintTextColor="#006064">

        <EditText
            android:id="@+id/post_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/title_post_url" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_post_url"
        android:layout_marginTop="10dp"
        android:textColorHint="#3C3B3B"
        app:boxStrokeColor="#006064"
        app:hintTextColor="#006064">

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/title_location" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_location"
        android:layout_marginTop="10dp"
        android:textColorHint="#3C3B3B"
        app:boxStrokeColor="#006064"
        app:hintTextColor="#006064">

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/title_company" />
    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>